Refactor code HandBook